added pings route
